# resume-builder-frontend

./: .gitignore  Dockerfile  LICENSE.txt  README.md  deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
src/resume_builder_frontend/: __about__.py  __init__.py  app.py  strings.py
tailor-frontend/: package-lock.json  package.json
tailor-frontend/src/: 1_intermediate.json  App.js
