[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-builder-frontend"
description = ''
readme = "README.md"
requires-python = ">=3.8,<4"
license = "MIT"
keywords = []
authors = [
  { name = "AbhiJ2706", email = "43829700+AbhiJ2706@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "reportlab",
    "streamlit",
    "validator-collection",
    "streamlit-tags",
    "streamlit-google-auth",
    "boto3",
    "python-dotenv"
]
version = "0.0.1"

[project.urls]
Documentation = "https://github.com/unknown/resume-builder-frontend#readme"
Issues = "https://github.com/unknown/resume-builder-frontend/issues"
Source = "https://github.com/unknown/resume-builder-frontend"

[tool.hatch.version]
path = "src/resume_builder_frontend/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/resume_builder_frontend tests}"

[tool.coverage.run]
source_pkgs = ["resume_builder_frontend", "tests"]
branch = true
parallel = true
omit = [
  "src/resume_builder_frontend/__about__.py",
]

[tool.coverage.paths]
resume_builder_frontend = ["src/resume_builder_frontend", "*/resume-builder-frontend/src/resume_builder_frontend"]
tests = ["tests", "*/resume-builder-frontend/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
